--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,16 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+@import url(https://fonts.googleapis.com/css?family=Josefin+Sans);
 
 
 body{
 	background-color: #ece9e9;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Quicksand', sans-serif;
+}
+.description{
+	font-family: 'Quicksand', sans-serif;
+	font-size: 16px;
+    word-wrap: break-word;
+    color:#888888;
+    padding-bottom: 20px;
 }
 .top-title{
    margin-top: 20px;
@@ -29,21 +36,24 @@ body{
 }
 .img-circle {
    position: relative;
-    bottom: 40px;
+    bottom: 40px;    
+    box-shadow: 5px 2px 10px #888888;
 }
 .titleHero{
 	    font-weight: 700;
 	    font-size: 25px;
 	    position: relative;
 	    top: -20px;
+    color:#5d5555;
 }
 .subTitleHero{
 	    font-weight: 700;
 	    font-size: 25px;
+    color:#5d5555;
 }
 .contentHero{
 	float: left;
-    width: 41%;
+       width: 44%;
     height: 390px;
     background-color: #ffffff;
     margin: 30px;
@@ -52,6 +62,7 @@ body{
 	border-radius: 0;
     background-color: #f00;
     color: #ffffff;
+    font-weight: 700;
 }
 .back-content{
 	background-color: rgb(241, 241, 241);
@@ -85,16 +96,15 @@ li{
 }
 
 #wrapper{
-	margin: 0px auto;
-	text-align: left;
-	width: 960px;
+	    margin: 0px auto;
+    text-align: left;
+    width: 100%;
 }
 
 #paging_container3{
 	height: 190px;
 }
 
-tradeview
 .ellipse{
 	float: left;
 }
@@ -102,18 +112,25 @@ tradeview
 .page_navigation , .alt_page_navigation{
 	padding-bottom: 10px;
 }
-
+.alt_page_navigation {
+	margin-left: 377px;
+    width: 38%;
+}
 .page_navigation a, .alt_page_navigation a{
-	padding: 3px 5px;
-    margin: 2px;
-    color: #222222;
+	padding: 10px 15px;
+    margin: 5px;
+    color: #afadad;
     text-decoration: none;
     float: left;
     font-family: Tahoma;
-    font-size: 12px;
-    background-color: #ece9e9;
+    font-size: 20px;
+    background-color: #ffffff;
+    box-shadow: 1px 1px 1px 1px #888888;
+	font-family: 'Josefin Sans', sans-serif;
+	font-weight: 700;
 }
 .active_page{
+	box-shadow: none!important;
 	background-color:white !important;
 	color:black !important;
 }	
@@ -121,7 +138,95 @@ tradeview
 .content, .alt_content{
 	color: black;
 }
-
-.content li, .alt_content li, .content > p{
-	padding: 5px
+.btn.focus, .btn:focus, .btn:hover {
+    color: #ffffff!important;
+    text-decoration: none;
 }
+.modal-content{
+	border-radius: 0px!important;
+}
+a {
+    color: #888888;
+    text-decoration: none;
+}
+a:hover, a:focus {
+    color: #f00;
+    text-decoration: none;
+}
+.modalTitle{
+	font-size: 25px;
+    font-weight: 700;
+    }
+.contentModal{
+    background-color: #dcdcdc;
+    padding: 0;
+    color: #f02;
+    text-align: center;
+     padding: 16px;
+    font-weight: 700;
+    font-size: 16px;
+    }
+.contentModal img{
+     padding-right: 10px;
+    }
+.contentModalAddIcon{
+    background: url("../img/icons/btn-favourites-default.png");
+        background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 42px;
+    float: left;
+    height: 42px;
+   }
+.contentModalAddIcon:hover{
+    background: url("../img/icons/btn-favourites-primary.png");
+        background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 42px;
+    float: left;
+    height: 42px;
+   }
+   .contentModalAddIcon::before {
+    content: "\0000a0";
+    width: 20px;
+    background: url("../img/icons/btn-favourites-primary.png") 8px no-repeat;
+}
+.contentModalAdd{
+    background-color: #e8e8e8;
+    padding: 0;
+    color: #222;
+    text-align: center; 
+    padding: 15px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 40px;
+    }
+.contentModalAdd:hover{
+    background-color: #402929;
+    padding: 0;
+    color: #f02;
+    text-align: center; 
+    padding: 15px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 40px;
+    }
+  .contentMenuModal{
+  	    width: 100%;
+    margin-left: 0px;
+  }
+.deleteFavorite{
+	 float: right;
+    position: relative;
+    top: 26px;
+    left: 20px;
+}
+ .titleMenuSub{
+      font-weight: bold;
+    font-size: 17px;
+    text-align: center;	
+ }   
+.open-AddBookDialog:hover::before {
+  content: "\2192";
+} 
